[package]
name = "rust-cw-keyer"
version = "0.1.0"
edition = "2021"
default-run = "rust-cw-keyer"

[[bin]]
name = "rust-cw-keyer"
path = "src/main.rs"

[[bin]]
name = "verify-keyer"
path = "src/bin/verify.rs"

[dependencies]
device_query = "2.1.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["term", "feature", "ioctl"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
serialport = "4.3.0"
